Remove tabs permission
Fixed runtime error
Unchecked runtime.lastError: Cannot create item with duplicate id extractLinksFromTargetPage
popup.html:90

--- a/extensions/url-extractor/manifest.json
+++ b/extensions/url-extractor/manifest.json
@@ -14,8 +14,7 @@
     "activeTab",
     "scripting",
     "contextMenus",
-    "storage",
-    "tabs"
+    "storage"
   ],
   "action": {
     "default_popup": "popup.html"
