--- a/extensions/text-replacer-extension/manifest.json
+++ b/extensions/text-replacer-extension/manifest.json
@@ -13,6 +13,7 @@
   "background": {
     "service_worker": "src/background.js"
   },
+  "options_page": "src/options/options.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
