[replacer] Add icons
path change to text-replacer

--- a/extensions/text-replacer/manifest.json
+++ b/extensions/text-replacer/manifest.json
@@ -3,6 +3,13 @@
   "name": "Text Replacer",
   "version": "1.0",
   "description": "A Chrome extension to replace text within specific HTML tags on the current page.",
+  "icons": {
+    "128": "icons/128.png",
+    "256": "icons/256.png",
+    "32": "icons/32.png",
+    "48": "icons/48.png",
+    "64": "icons/64.png"
+  },
   "permissions": [
     "activeTab",
     "storage"
