[replacer] Update description for simply

--- a/extensions/text-replacer/manifest.json
+++ b/extensions/text-replacer/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Text Replacer",
   "version": "1.0",
-  "description": "A Chrome extension to replace text within specific HTML tags on the current page.",
+  "description": "Replace text patterns using regular expressions within specific HTML tags or their attributes.",
   "icons": {
     "128": "icons/128.png",
     "256": "icons/256.png",
